# windbg-agent

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.bat  dml_output.cpp  dml_output.hpp  handoff_server.cpp  handoff_server.hpp  http_server.cpp  http_server.hpp  main.cpp  mcp_server.cpp  mcp_server.hpp  output_capture.cpp  output_capture.hpp  session_store.cpp  session_store.hpp  settings.cpp  settings.hpp  system_prompt.hpp  version.h.in  windbg_agent.def  windbg_client.cpp  windbg_client.hpp
.github/workflows/: build.yml
cli/: main.cpp
